--- a/calculator/index.html
+++ b/calculator/index.html
@@ -15,7 +15,8 @@
     <div class="row gap-3">
       <div class="col-12">
         <div class="form-group">
-          <input id="calc_input_first" type="number" inputmode="numeric" class="form-control" required placeholder="Enter number" />
+          <input id="calc_input_first" type="number" inputmode="numeric" class="form-control" required
+            placeholder="Enter number" />
         </div>
       </div>
       <div class="col-12">
@@ -31,7 +32,8 @@
       </div>
       <div class="col-12">
         <div class="form-group">
-          <input id="calc_input_second" type="number" inputmode="numeric" class="form-control" required placeholder="Enter number" />
+          <input id="calc_input_second" type="number" inputmode="numeric" class="form-control" required
+            placeholder="Enter number" />
         </div>
       </div>
       <div class="w-100  ">
@@ -40,15 +42,15 @@
         </div>
       </div>
       <div class="w-100 mt-3 ">
-        <h3>See Result</p>
-          <div id="calc_result">
+        <div id="calc_result">
+          <h3>Result will appear here</h3>
             <!-- <div class="p-2 border rounded border-2 text-success border-success">
               <p>Result is valid!</p>
               <p>1+2=3</p>
             </div> -->
 
-            
-          </div>
+
+        </div>
       </div>
     </div>
   </div>
@@ -60,7 +62,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"></script>
-    <script src="./resources/calculator_script.js"></script>
+  <script src="./resources/calculator_script.js"></script>
 </body>
 
 </html>
