--- a/calculator/index.html
+++ b/calculator/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!-- StyleSheet from Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <title>Document</title>
@@ -15,12 +16,14 @@
     <div class="row gap-3">
       <div class="col-12">
         <div class="form-group">
+<!-- first input field -->
           <input id="calc_input_first" type="number" inputmode="numeric" class="form-control" required
             placeholder="Enter number" />
         </div>
       </div>
       <div class="col-12">
         <div class="form-group">
+<!-- arithmetic operations -->
           <select id="calc_operation" class="form-control">
             <option value="">Select an arithmetic operation</option>
             <option value="+">Addition (+)</option>
@@ -32,6 +35,7 @@
       </div>
       <div class="col-12">
         <div class="form-group">
+<!-- second input field -->
           <input id="calc_input_second" type="number" inputmode="numeric" class="form-control" required
             placeholder="Enter number" />
         </div>
@@ -44,24 +48,20 @@
       <div class="w-100 mt-3 ">
         <div id="calc_result">
           <h3>Result will appear here</h3>
-            <!-- <div class="p-2 border rounded border-2 text-success border-success">
-              <p>Result is valid!</p>
-              <p>1+2=3</p>
-            </div> -->
-
-
+<!-- result preview -->
         </div>
       </div>
     </div>
   </div>
 
-
+<!-- script from Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"></script>
+<!-- vanilla JS script -->
   <script src="./resources/calculator_script.js"></script>
 </body>
 
